--- a/payments/templates/home.html
+++ b/payments/templates/home.html
@@ -1,18 +1,10 @@
 <h2>Buy for $100</h2>
 <form action="{% url 'charge' %}" method="post">
     {% csrf_token %}
-    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button">
-        data-keys="{{ key }}"
+    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+        data-key="{{ key }}" 
         data-description="Payment Gateway"
         data-amount="500"
-        data-locale="auto"
+        data-locale="auto">
     </script>
 </form>
-
-
-
-
-
-{% comment %}  {% endcomment %}
-
-
